tests/ui/parser/dyn-trait-compatibility.stderr
error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:2:11
   |
LL | type A0 = dyn;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:6:11
   |
LL | type A2 = dyn<dyn, dyn>;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:6:15
   |
LL | type A2 = dyn<dyn, dyn>;
   |               ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:6:20
   |
LL | type A2 = dyn<dyn, dyn>;
   |                    ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:10:11
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |           ^^^ not found in this scope

error[E0405]: cannot find trait `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:10:23
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                       ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:10:16
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                ^^^ not found in this scope

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dyn`
  --> $DIR/dyn-trait-compatibility.rs:4:11
   |
LL | type A1 = dyn::dyn;
   |           ^^^ use of unresolved module or unlinked crate `dyn`
   |
   = help: you might be missing a crate named `dyn`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0405, E0412, E0433.
For more information about an error, try `rustc --explain E0405`.
